* Author: Mike FABIAN <mfabian@redhat.com>
* 06 Feb 2019 Released 2.5.2 version
* Fix test case for selecting non existing candidates for Fedora rawhide
* Update UnicodeData.txt to current Unicode 12.0 draft
* Update emoji data to Unicode 12.0 final for 2019
* Update emoji annotations from CLDR
* Initialize self.dictionary_sub_properties_prop_list = [] in self._init_properties() (Resolves: https://github.com/mike-fabian/ibus-typing-booster/issues/46)
* Fix test case for case mode change
* Improve filter for dictionary selection if langtable available

* Author: Mike FABIAN <mfabian@redhat.com>
* 29 Jan 2019 Released 2.5.1 version
* Update translations from zanata (de, ja, fr, pl updated)
* Show also dictionary when “Show status in auxiliary text” is on
* Set notebook in setup tool to scrollable
* Make filter for dictionary selection work for language descriptions if langtable available
* Show names of languages and territories in setup tool if langtable is available
* Add missing flag for csb_PL
* Add option to automatically select the best candidate
* Pressing Shift should not immediately change the case mode of the candidates

* Author: Mike FABIAN <mfabian@redhat.com>
* 16 Jan 2019 Released 2.5.0 version
* Update translations from zanata (de, ja, uk updated)
* Add a property menu for the highest priority dictonary
* Add a missing _update_preedit()
* When lookup is enabled by tab but the lookup table is empty, the first cancel should clear the input
* Reset self.is_lookup_table_enabled_by_tab and self.is_lookup_table_enabled_by_min_char_complete when input is cleared
* Get suggestions from hunspell dictionaries only for input which does not contain spaces
* Don’t reinitialize the dictionaries if only the order of the dictionaries has changed
* Add key bindings to change the priority of dictionaries
* Speech recognition input using Google speech-to-text
* Change the default input methods for as_IN, kn_IN, and ta_IN